fix noncompiling snippets on safari when using scala.js, also fix metals tooltips

--- a/client/src/main/resources/sass/tooltip.scss
+++ b/client/src/main/resources/sass/tooltip.scss
@@ -6,6 +6,7 @@
     .cm-completionInfo, &-hover {
       font-size: 14px;
       min-width: 400px;
+      max-width: 500px;
       max-height: 500px;
       overflow-x: hidden;
       ul {
